Bug 126669, we need to pass in aHasChildren parameter to the start tag serializing function because the node that is passed in may be a shallow copy, thereby making it impossible to determine if it originally had children, in the method itself. This fixes case where saving XHTML produces non-wellformed output. r=akkana,tmutreja, sr=jst, a=asa,ADT.