content/base/public/nsIContentSerializer.h
@@ -84,6 +84,7 @@ class nsIContentSerializer : public nsISupports {
                            nsAString& aStr) = 0;
 
   NS_IMETHOD AppendElementStart(nsIDOMElement *aElement,
+                                PRBool aHasChildren,
                                 nsAString& aStr) = 0;
 
   NS_IMETHOD AppendElementEnd(nsIDOMElement *aElement,
