content/base/src/nsHTMLContentSerializer.h
@@ -59,6 +59,7 @@ class nsHTMLContentSerializer : public nsXMLContentSerializer {
                         PRInt32 aEndOffset,
                         nsAString& aStr);
   NS_IMETHOD AppendElementStart(nsIDOMElement *aElement,
+                                PRBool aHasChildren,
                                 nsAString& aStr);
   
   NS_IMETHOD AppendElementEnd(nsIDOMElement *aElement,
